[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "jinja-thing"
version = "0.1.0"
[tool.poetry.dependencies]
jinja2 = "^2.11"
python = "^3.7"
flask = "^1.1"
waitress = "^1.4"
[tool.poetry.dev-dependencies]
